# attention_system

./: LICENSE  README.md  requirements.txt  thirdparty.repos
attention_actuation/attention_actuation_msgs/: CMakeLists.txt  package.xml
attention_actuation/attention_actuation_msgs/action/: TurnBodyWithNeckCompensation.action
attention_actuation/kobuki_attention_actuation/: CMakeLists.txt  package.xml
attention_actuation/kobuki_attention_actuation/include/kobuki_attention_actuation/: TrackTFStatic.hpp
attention_actuation/kobuki_attention_actuation/launch/: kobuki_attention.launch.py
attention_actuation/kobuki_attention_actuation/src/: track_tf_static_main.cpp
attention_actuation/kobuki_attention_actuation/src/kobuki_attention_actuation/: TrackTFStatic.cpp
attention_actuation/nao_attention_actuation/: CMakeLists.txt  package.xml
attention_actuation/nao_attention_actuation/include/nao_attention_actuation/: BodyTurnWithNeckCompensation.hpp  TrackTFWithNeck.hpp
attention_actuation/nao_attention_actuation/launch/: nao_attention.launch.py
attention_actuation/nao_attention_actuation/src/: body_turn_with_neck_compensation_main.cpp  track_tf_with_neck_main.cpp
attention_actuation/nao_attention_actuation/src/nao_attention_actuation/: BodyTurnWithNeckCompensation.cpp  TrackTFWithNeck.cpp
attention_system_behaviors/: CMakeLists.txt  package.xml
attention_system_behaviors/behavior_tree_xml/: track_detections_same_class_midpoint_rot.xml  track_joint_art.xml  track_unknown_detection_rot.xml
attention_system_behaviors/include/attention_system_behaviors/: ActivateTwisting.hpp  ChangeVisualDetectionClass.hpp  ClearVisualDetectionClass.hpp  DetectionExists.hpp  DetectionNearSightCenter.hpp  DetectionNearSightLimit.hpp  GetDetections2DInformation.hpp  GetTFCompactTreeInformation.hpp  IsRobotOutOfBounds.hpp  JointTrackingKinematicallyFeasible.hpp  N3dDetectionsSameClassExist.hpp  No3dDetectionsSameClassExist.hpp  PublishRobotOutOfBoundsReferenceTF.hpp  PublishTwist.hpp  RequestBehaviorInputIntelligence.hpp  RequestNDetectionsSameClassTrackPoint.hpp  RequestSingleDetectionTrackPoint.hpp  StartTrackTF.hpp  TFExists.hpp  TrackedDetectionsClustered.hpp  TreeTickTrace.hpp  TriggerDeactivationService.hpp
attention_system_behaviors/src/: register_bt_plugins.cpp  track_detection_example_test.cpp  track_detections_same_class_test.cpp  track_joint_art_test.cpp  track_unknown_detection_rot_test.cpp
attention_system_behaviors/src/attention_system_behaviors/: ActivateTwisting.cpp  ChangeVisualDetectionClass.cpp  ClearVisualDetectionClass.cpp  DetectionExists.cpp  DetectionNearSightCenter.cpp  DetectionNearSightLimit.cpp  GetDetections2DInformation.cpp  GetTFCompactTreeInformation.cpp  IsRobotOutOfBounds.cpp  JointTrackingKinematicallyFeasible.cpp  N3dDetectionsSameClassExist.cpp  No3dDetectionsSameClassExist.cpp  PublishRobotOutOfBoundsReferenceTF.cpp  PublishTwist.cpp  RequestBehaviorInputIntelligence.cpp  RequestNDetectionsSameClassTrackPoint.cpp  RequestSingleDetectionTrackPoint.cpp  StartTrackTF.cpp  TFExists.cpp  TrackedDetectionsClustered.cpp  TriggerDeactivationService.cpp
attention_system_core/attention_system/: CMakeLists.txt  package.xml
attention_system_core/attention_system/config/: attention_behaviors_config.yaml  attention_orchestrator_params.yaml
attention_system_core/attention_system/include/attention_system/: AttentionOrchestrator.hpp  attention_behaviors_utils.hpp  attention_states.hpp
attention_system_core/attention_system/include/attention_system/intelligence/: AttentionIntelligence.hpp  attention_intelligence_states.hpp
attention_system_core/attention_system/launch/: attention_system.launch.py
attention_system_core/attention_system/src/: attention_client_v2.cpp  attention_subsystems_main.cpp
attention_system_core/attention_system/src/attention_system/: AttentionOrchestrator.cpp
attention_system_core/attention_system/src/attention_system/intelligence/: AttentionIntelligence.cpp
attention_system_core/attention_system_interfaces/: CMakeLists.txt  package.xml
auxiliar_perception/attention_perception_launchers/: CMakeLists.txt  package.xml
auxiliar_perception/omdet_turbo/omdet_node/: package.xml  (+2 more)
auxiliar_perception/simple_perception/attention_aux_perception_msgs/: CMakeLists.txt  package.xml
auxiliar_perception/simple_perception/attention_aux_perception_msgs/srv/: StartNDetectionsSameClassTFPub.srv  StartSingleDetectionTFPub.srv
auxiliar_perception/simple_perception/attention_aux_perception_nodes/: CMakeLists.txt  package.xml
auxiliar_perception/simple_perception/attention_aux_perception_nodes/include/attention_aux_perception_nodes/: Detection3dProjector.hpp  Detection3dProjectorAstraDepht.hpp  Detection3dProjectorNoDepht.hpp  Detection3dProjectorRgbdDepth.hpp  PubNDetectionsSameClassTF.hpp  PubSingleDetectionTF.hpp
auxiliar_perception/simple_perception/attention_aux_perception_nodes/src/: detection_3d_projector_astra_depht_node.cpp  detection_3d_projector_no_depht_node.cpp  detection_3d_projector_node.cpp  detection_3d_projector_rgbd_depth_node.cpp  pub_n_detections_same_class_tf_main.cpp  pub_single_detection_tf_main.cpp
auxiliar_perception/simple_perception/attention_aux_perception_nodes/src/attention_aux_perception_nodes/: Detection3dProjector.cpp  Detection3dProjectorAstraDepht.cpp  Detection3dProjectorNoDepht.cpp  Detection3dProjectorRgbdDepth.cpp  PubNDetectionsSameClassTF.cpp  PubSingleDetectionTF.cpp
docs/: ADDING_ATTENTION_BEHAVIORS.md  ROS_INTERFACES.md  VALIDATION_AND_TROUBLESHOOTING.md
llm_management/gemini_bridge/google_gemini_bridge_cpp/: CMakeLists.txt  package.xml  thirdparty.repos
llm_management/gemini_bridge/google_gemini_bridge_cpp/include/google_gemini_bridge_cpp/: GeminiBridge.hpp
llm_management/gemini_bridge/google_gemini_bridge_cpp/src/: gemini_bridge_cpp_node.cpp
llm_management/gemini_bridge/google_gemini_bridge_cpp/src/google_gemini_bridge_cpp/: GeminiBridge.cpp
llm_management/llm_router/llm_router/: package.xml  setup.cfg  setup.py
llm_management/llm_router/llm_router/llm_router/: llm_router.py
(+18 files in other folders)
