<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>attention_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.cobosb.2022@alumnos.urjc.es">scobosb</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>attention_system_interfaces</depend>
  <depend>llm_router_msgs</depend>
  <depend>attention_aux_perception_msgs</depend>
  <depend>behavior_architecture</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
