<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_router</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dev.scobosb@gmail.com">scobosb</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>llm_router_msgs</depend>
  <depend>gemini_bridge_interfaces</depend>
  <depend>llama_msgs</depend>
  <depend>type_description_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
